--- a/index.html
+++ b/index.html
@@ -47,6 +47,14 @@
            href="https://www.twitch.tv/directory/game/World%20of%20Warcraft">
        <img src="https://static-cdn.jtvnw.net/ttv-boxart/18122-150x170.jpg" alt="imagem do jogo World of warcraft"></a>
          </li>
+
+         <li>
+          <a 
+           target="_blank"
+           href="https://www.twitch.tv/directory/game/Grand%20Theft%20Auto%20V">
+       <img src="https://static-cdn.jtvnw.net/ttv-boxart/32982_IGDB-150x170.jpg" alt="imagem do jogo GTA"></a>
+       
+         </li>
        </ul>
        </div>
      </section>
